Fix layout issues. Add dashboard in doctor menu.

--- a/frontend/src/sass/abstracts/_variables.scss
+++ b/frontend/src/sass/abstracts/_variables.scss
@@ -9,9 +9,9 @@ $color-input: #e8f0fe;
 $admin-back: #CDF5FD;
 $info-container: #A0E9FF;
 $info-container-hover: #89CFF3;
-$admin-p: #62B6CB;
+$admin-p: #38d0f6;
 $admin-s: #5FA8D3;
-$admin-t: #f0f0f0;
+$admin-t: #d8ebfa;
 $admin-q: #CAE9FF;
 // $admin-p: #424242;
 // $admin-s: #525CEB;
